add experimental 3d painting viewer using threejs

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
   <head>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
-    <canvas id="drwResult"></canvas>
-    <script src="./index.ts"></script>
+    <!-- <canvas id="drwResult"></canvas> -->
+    <script src="./Drw3dViewer.ts"></script>
   </body>
 </html>
