--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         margin: 0;
         padding: 0;
       }
+
+      * {
+        outline: 0;
+      }
     </style>
   </head>
   <body>
-    <!-- <canvas id="drwResult"></canvas> -->
-    <script src="./Drw3dViewer.ts"></script>
+    <script src="./3dGallery.ts"></script>
   </body>
 </html>
